--- a/ProveJS/requirements.txt
+++ b/ProveJS/requirements.txt
@@ -1,7 +1,7 @@
-jsonschema                        3.2.0
-Django                            3.2.6
-djangorestframework               3.12.4
-opencv-contrib-python             4.5.3.56
-opencv-python                     4.5.3.56
-numpy                             1.21.2
-PyYAML                            5.4.1
+jsonschema==3.2.0
+Django==3.2.6
+djangorestframework==3.12.4
+opencv-contrib-python==4.5.3.56
+opencv-python==4.5.3.56
+numpy==1.21.2
+PyYAML==5.4.1
